Add integration test validating full order payment and inventory flow

--- a/OrderProcessing.Domain.Tests/OrderProcessing.Domain.Tests.csproj
+++ b/OrderProcessing.Domain.Tests/OrderProcessing.Domain.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrderProcessing.Domain\OrderProcessing.Domain.csproj" />
+    <ProjectReference Include="..\OrderProcessing.Application\OrderProcessing.Application.csproj" />
   </ItemGroup>
 
 </Project>
